--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,4 +4,5 @@
 	<string name="scan_code">Scan Code</string>
 	<string name="web_link">Go To Web interface</string>
 	<string name="error">Error</string>
+	<string name="log_label">History</string>
 </resources>
